fix: sonar warnings (#120)
* [REF] Fix sonar warnings

* [FIX] Add fix to security configuration

* [REF] Remove pom change

* [FIX] Back to 'mutable' product image list

---------

Co-authored-by: EzeSosa <ezequielsosa423@gmail.com>